feat: Se muestran las cartas por 3 segundos antes de ocultarse

--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>Memotest</title>
-  <link rel="stylesheet" href="./styles/custom.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Memotest</title>
+    <link rel="stylesheet" href="./styles/custom.css" />
+  </head>
+  <body>
+    <h2>Puntos: <span id="indicador-puntos">0</span></h2>
+    <div class="tablero"></div>
 
-<div><h2>Puntos: <span id="indicador-puntos">0</span> </h2> </div>
-  <div class="tablero">
-  </div>
-
-  <div class="modal-backdrop">
-    <div class="modal">
-      <h3>Fin del juego</h3>
+    <div class="modal-backdrop">
+      <div class="modal">
+        <h3>Fin del juego</h3>
+      </div>
     </div>
-  </div>
 
-
-  
-  <script src="./scripts/main.js"></script>
-</body>
+    <script src="./scripts/main.js"></script>
+  </body>
 </html>
